<resources>
    <string name="app_name">Calendar</string>

    <!--日历-->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="today">Today</string>

    <!--月份-->
    <string name="january">一月</string>
    <string name="february">二月</string>
    <string name="march">三月</string>
    <string name="april">四月</string>
    <string name="may">五月</string>
    <string name="june">六月</string>
    <string name="july">七月</string>
    <string name="august">八月</string>
    <string name="september">9月</string>
    <string name="october">10月</string>
    <string name="november">11月</string>
    <string name="december">12月</string>
</resources>
