<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2d2d41"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/ivLeft"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:textColor="#ffffff"
                    android:text="tvMonth"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/ivRight"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30.0dip"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="13dp">

                <TextView
                    style="@style/weekName"
                    android:text="@string/sunday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/monday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/tuesday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/wednesday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/thursday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/friday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />

                <TextView
                    style="@style/weekName"
                    android:text="@string/saturday"
                    android:textColor="#ffffff"
                    android:textSize="13sp" />
            </LinearLayout>

            <com.example.text.calendar.NoScrollGridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:clipChildren="true"
                android:columnWidth="40dp"
                android:horizontalSpacing="1.0dip"
                android:listSelector="@null"
                android:numColumns="7"
                android:overScrollMode="never"
                android:paddingBottom="10dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1.0dip" />

        </LinearLayout>

        <!-- 处理日历的东西 -->
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#55ff0000"
            android:dividerHeight="10dp"
            android:listSelector="#5500ff00"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="下一步"
        android:textSize="16sp" />
</LinearLayout>